--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 attrs==21.4.0
+coverage==6.3.1
 cycler==0.11.0
 fonttools==4.29.1
 iniconfig==1.1.1
@@ -11,6 +12,7 @@ pluggy==1.0.0
 py==1.11.0
 pyparsing==3.0.7
 pytest==7.0.0
+pytest-cov==3.0.0
 python-dateutil==2.8.2
 six==1.16.0
 tomli==2.0.1
